--- a/Code/group3_project4.ipynb
+++ b/Code/group3_project4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
+    "import joblib\n",
     "%matplotlib inline\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,20 +160,20 @@
        "4             Good                6               Good  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Loading data\n",
-    "df = pd.read_csv(\"Resources/global_air_pollution_dataset.csv\")\n",
+    "df = pd.read_csv(\"../Resources/global_air_pollution_dataset.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +265,7 @@
        "PM2.5 AQI Value         1.000000  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +357,7 @@
        "4             0               22              0                6"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +382,7 @@
        "array(['Moderate', 'Good', 'Moderate', 'Good', 'Good'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +476,7 @@
        "       'Very Unhealthy', 'Hazardous'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +497,7 @@
        "0.9996590521650187"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +704,7 @@
        " (0.007290287026545319, 'NO2 AQI Value')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +727,7 @@
        "<AxesSubplot:title={'center':'Features Importances'}, ylabel='1'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -755,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +993,7 @@
        " Text(0.9918533604887984, 0.65625, 'gini = 0.0\\nsamples = 14\\nvalue = [0, 22, 0, 0, 0, 0]')]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1028,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1055,7 @@
        "      <th></th>\n",
        "      <th>CO AQI Value</th>\n",
        "      <th>Ozone AQI Value</th>\n",
-       "      <th>NO2 AQI Value</th>\n",
+       "      <th>PM2.5 AQI Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1062,46 +1063,46 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>36</td>\n",
-       "      <td>0</td>\n",
+       "      <td>51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
+       "      <td>41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>39</td>\n",
-       "      <td>2</td>\n",
+       "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>34</td>\n",
-       "      <td>0</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>22</td>\n",
-       "      <td>0</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   CO AQI Value  Ozone AQI Value  NO2 AQI Value\n",
-       "0             1               36              0\n",
-       "1             1                5              1\n",
-       "2             1               39              2\n",
-       "3             1               34              0\n",
-       "4             0               22              0"
+       "   CO AQI Value  Ozone AQI Value  PM2.5 AQI Value\n",
+       "0             1               36               51\n",
+       "1             1                5               41\n",
+       "2             1               39               66\n",
+       "3             1               34               20\n",
+       "4             0               22                6"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1126,7 @@
        "0.9996590521650187"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1152,10 +1153,10 @@
       "text/plain": [
        "[(0.07978466120214603, 'Ozone AQI Value'),\n",
        " (0.066161672164175, 'CO AQI Value'),\n",
-       " (0.007290287026545319, 'NO2 AQI Value')]"
+       " (0.007290287026545319, 'PM2.5 AQI Value')]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,6 +1166,27 @@
     "importances = rf_model.feature_importances_\n",
     "# We can sort the features by their importance\n",
     "sorted(zip(rf_model.feature_importances_, X.columns), reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['rf_model.pkl']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import dump\n",
+    "dump(rf_model, 'rf_model.pkl') "
    ]
   }
  ],
